--- a/scss/partials/_skills.scss
+++ b/scss/partials/_skills.scss
@@ -1,13 +1,10 @@
 .skills {
-  margin-top: -20vh;
   z-index: 1;
-  background-color: #fff;
-  transform: skewY(-10deg);
   padding-bottom: 30px;
+  
   .wrapper {
     text-align: right;
     padding-top: 30px;
-    transform: skewY(10deg);
     h2 {
       margin: 0;
     }
